# dados-eb-backoffice

./: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
config/: getenv.py
config/getenv_mixins/: db_clickhouse_connection.py  db_postgres_connection.py  validate_env.py
docs/: ARCHITECTURE.md  DEPLOY_DOCKER.md
scripts/: update_shareds.ps1
src/api_rest/: auth.py  main.py
src/api_rest/v1/: main.py
src/api_rest/v1/endpoints/: formas_operacao.py  operadoras.py  processos.py  produtos.py  retencao_carteirinhas.py  rpas.py  status.py  status_acessos.py  tipos_contrato.py  tipos_rpa.py
src/application/rpas/: forma_operacao.py  operadora.py  processo.py  produto.py  retencao_carteirinha.py  rpa.py  status.py  status_acessos.py  tipo_contrato.py  tipo_rpa.py
src/data/db_backoffice_eb/: alembic.ini  create_db_and_schemas.py  db_session.py  env.py
src/data/db_backoffice_eb/models/: _all_models.py  _base_model.py  rpas.py
src/data/db_backoffice_eb/versions/: 4fc40386fe85_modelo_incial_rpas.py  5105a59342db_seed_rpas_dimensions.py
src/tests exemplo/application/: _tests_config.py  conftest.py
src/tests exemplo/application/categorias/: test_create.py  test_delete.py  test_get_by_id.py  test_list_all.py  test_update.py
tests/: _tests_config.py  conftest.py
tests/application/rpas/: test_forma_operacao.py  test_operadora.py  test_processo.py  test_produto.py  test_retencao_carteirinha.py  test_rpa.py  test_rpa_bi.py  test_status.py  test_status_acessos.py  test_tipo_contrato.py  test_tipo_rpa.py
(+23 files in other folders)
