[project]
name = "qbem-backoffice-eb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "psycopg2>=2.9.11",
    "shareds",
]

[tool.uv.sources]
shareds = { git = "https://github.com/qbem-repos/dados-py-shareds.git", rev = "master" }
